--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
-langgraph==0.1.5
-python-doctr[tf]==0.7.0
-pydantic<2.0.0
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-core==0.1.10
-langchain-groq==0.1.0
-sentence-transformers==2.2.2
-chromadb==0.4.18
-torch==2.1.0
-transformers==4.36.0
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+python-multipart==0.0.12
+python-dotenv==1.0.1
+pydantic==1.10.18
+langchain==0.3.7
+langchain-community==0.3.7
+langchain-core==0.3.15
+langchain-groq==0.2.1
+sentence-transformers==3.3.1
+chromadb==0.5.23
+transformers==4.46.3
+python-doctr==0.9.0
+langgraph==0.2.45
