--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-python-multipart==0.0.12
-python-dotenv==1.0.1
-pydantic==1.10.18
-langchain==0.3.7
-langchain-community==0.3.7
-langchain-core==0.3.15
-langchain-groq==0.2.1
-sentence-transformers==3.3.1
-chromadb==0.5.23
-transformers==4.46.3
-python-doctr==0.9.0
-langgraph==0.2.45
+fastapi>=0.100.0,<0.120.0
+uvicorn[standard]>=0.20.0,<0.30.0
+python-multipart>=0.0.6,<1.0.0
+python-dotenv>=1.0.0,<2.0.0
+pydantic>=1.10.0,<2.0.0
+langchain>=0.0.200,<0.1.0
+langchain-community>=0.0.20,<0.1.0
+langchain-core>=0.1.0,<0.2.0
+langchain-groq>=0.0.1,<0.1.0
+sentence-transformers>=2.2.0,<3.0.0
+chromadb>=0.4.0,<0.5.0
+transformers>=4.30.0,<5.0.0
+python-doctr>=0.6.0,<0.8.0
+langgraph>=0.0.50,<0.1.0
